ansible/roles/k8s_addon_longhorn/files/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: public
      namespace: cilium-ingress-gateway
      sectionName: http-k8s-home-arpa
  hostnames:
    - longhorn.k8s.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
